# pattern

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  group-coordination-guide.md  pattern.example.toml  tool-system-guide.md
crates/pattern_auth/: CLAUDE.md  Cargo.toml
crates/pattern_auth/.sqlx/: query-10e5e0315276347043124548a8e2bbc83b4e6314bc1b1251aea2aef40cd3dad9.json  query-1c334878333b5ffb09434319e47a3205e1756082e8d66bcd23340d31d32f619f.json  query-22aefb194bcd81c33becff3a72c9c515196234c1a60d0135d06607d3e1fa6e20.json  query-28076aa4f19efa9cf79fa6b8a20a20e573baf4df20cddf98a7126b31c1bc0765.json  query-2dfc4ea346a11b63d77898f742a961befd21344ee2877a1d4fd917e0cbaed578.json  query-45e6b186ad62fe3223c12fbc50cc0c8b56a82dc5ab07f541d009587224165a5a.json  query-6c6378bce095456c7c44d5a05aad1c40ecefc791d66ab4f8365933f1b499cda3.json  query-6cea8047d75190feb4a87b36d6d16a1abd3025164d6bfea80ba9042755a4f164.json  query-6eb3b70e20c75168a4ccc0d359b4b8ee88c34145916559f8e4891d88f4e8a839.json  query-7c83fc13935116f38e7acf9168569c0dc435be9ba1ec4cad7ba052cc9c5abc2e.json  query-8a29f015851102d856c437fe631b7998f1b9e95dec3e64e33b86323e86189ea2.json  query-904760a11f305a61ae497e1396815a49e02d9edca60730fb3c8019eeedf92dcc.json  query-951ef150aaf862af34320066c62861aa0e41faa176043f6780a66f1444c2da10.json  query-9a1ef956c23877a73a3d14c87e7d71518fea4183a3d35cfb6a4b9fa4da7563a8.json  query-c0eb899ee1edb5fe063e156c8b14484e558924c225faa7a7d9581d69856b5b60.json  query-f32077846e9e30a2cd2766dce0da50b1f18de9309a06f98fe5268718b750ab15.json  query-fc7b990239c327d4692c5f6a8891d5c7d9d7ac55c3ada9b4e60d593dd44ef20b.json
crates/pattern_auth/migrations/: 0001_initial.sql
crates/pattern_auth/src/: db.rs  error.rs  lib.rs
crates/pattern_cli/: CLAUDE.md  Cargo.toml
crates/pattern_cli/src/: agent_ops.rs  background_tasks.rs  chat.rs  coordination_helpers.rs  data_source_config.rs  discord.rs  endpoints.rs  forwarding.rs  helpers.rs  main.rs  message_display.rs  slash_commands.rs
crates/pattern_db/: .gitignore  CLAUDE.md  Cargo.toml
crates/pattern_db/.sqlx/: query-005573b04c1d3b8ca49d78401b9625b527ff50a347cf12180f60f3ed066004ef.json  query-035f04fe9b40da9b3a34e3264bb9609b88857280e4414b77ac95af96cd7adddc.json  query-085c6ba1af016053d4b7afe42dde69658ec771718ec64ea4e51de574df783ace.json  query-09f99c72c9be6a0bd1f58840ef5514a390f3ffa51201fc273709f84d9a3b5cd8.json  query-0a6931e3e2575411a2a1f81133284714ae4d9744f4e8295b8ec8a7bfecd66275.json  query-0c35313376ab4315b40db00236bea1a75e3411e576cae8ce032d2154e7d42520.json  query-0d1619bc15ddea885115a196bcecfe58755cd73155a2ffc5e352d8ed1ece5cec.json  query-0da841a03e7737cb95ecccc7a17d117c27a3fe6cd67c52f458806075d2921646.json  query-0de5029503bcb70a8db4ad0c63875511ec6bfd065fb9c1a8d8264d98edb0b93f.json  query-1053c192bf53f4a5e017e8082b2a5cc4c2f266d3a2cdab2d281ebfe90ff4f5d2.json  query-1058d4491d45c1c1c4d3b6e99da011249bd74c693b3d095366d82e0199e2cf1c.json  query-1076fa4949e0d61ee66601c18629d208cd2e08650fb685d7d804be64e63e51b9.json  query-1208c51696863a168ea22a5cf24f3bff96e7b9d6bfb3c0db64c7a67f329ed0f2.json  query-12d1c07f47a89476a2c4d8238c41ff80bf64b36164fce4c0aacd5bb80bf0d204.json  query-1a0d9c28105470dab82343dbf12461d663baaeaef51a7e87eaf1e0e43f3afa85.json  query-1ad0bf4651203855d83959e4c36eda04e46b30ab306967a67ef91cff0d66e0df.json  query-1d5fc983e0553edfbcf69c5146ae74411424412432630f1a29142a6c37c08491.json  query-20c2ab9a3d33d41845493b06abbfd6c8d6f846af0dfd42db619e6ebb86092830.json  query-217dd760df9f402d4933beffa064fac9126a7e5d395e56f490f6ca1478228ff0.json  query-21b334b5a2fbf08830606b16707e1a153afcd14f6ea219a0dc43a5856e90beef.json  query-22b3bb80c19a0e1aebe4dcd1f5f433fd5962eebacccb4a4dd6cd3fdf14a6beb0.json  query-2333a9e34bd1f1c1edc98869658c6ff1df10743442192badda01e33e5c29b1fe.json  query-27a6be9b7ccce29d1aa4e49b0a093d48a6ecf637a869cd2f2aca9319426b23c8.json  query-2c2fbd9f06532af63686ed4348abe116ba92e2326c4f4d5d63943f7f1da17ba7.json  query-2c4701263610713916565d6ca71b890f13fb8b7042dd44c02ed705527db7da51.json  query-2e963cb0b4fbd1d098641c099055261ddb9773167d7f75e28abaf922e97fa57f.json  query-31c09aa2831d24b7d8f6de3c75811277b8712a77cdce1c575061f81698a29c07.json  query-33de5f8dc8f7f9d19ca30a41505f4f562031150f7804c9f3e8ff6d35d8751148.json  query-351b447919c829efbe2e501cc6fd4aa3dcce06221c176118b7ad0d05cb66ea8e.json  query-356cb75b0077b9b4c6835e98dd1af0db4fe5b113b90bbf48c859fc519f204f5b.json  query-35eb11f7301c112c3a357c8a443ee8c5c823620b268badc48889f14439352855.json  query-362988f0299c8ae16f922d169f9e22ea43c87acc6b21506a7d7fcb5344b2ca50.json  query-36b5eb7e72531227aadee8e159daa99c335f65ce2a6722da673efdc4d564854f.json  query-3a995b0d5e259a9ae9e2f92a942124d918a4af6f2d60d888d18468227a897bd9.json  query-3c38a152133ee5badb77916af69e2ab6070a590ee405a600704f53e6194ca287.json  query-3d740a7c73300e8b1caedb7b1897bff199e29cf31dc3f5ac2bbb53f5b872ce89.json  query-3d7ceaead7513a3bcf7c10c25ba67a535eeffa170afbdd39a1ecd026c793d6ee.json  query-3e3879e70f9d1af8c5e0e20025dab43a54886b8fe9f7bc2844e6566e74759c98.json  query-3ef498e24961c51eee524dd5304eedabef2acaeb51c4d352247774ac0ed93dec.json  query-3fc4495570fd71ea6684cc3bd1aa0529a0e4ab0946f12ab0bfa909fa434ef17b.json  (+160 more)
crates/pattern_db/migrations/: 0001_initial.sql  0002_fts5.sql  0003_model_fields.sql  0004_memory_updates.sql  0005_queued_messages.sql  0006_archival_fts_metadata.sql  0007_message_tombstones.sql  0009_agent_atproto_endpoints.sql  0010_add_session_id_to_atproto_endpoints.sql  0011_member_capabilities.sql  0012_queued_message_full_content.sql  0013_update_frontiers.sql
crates/pattern_db/src/: connection.rs  error.rs  fts.rs  lib.rs  search.rs  vector.rs
crates/pattern_surreal_compat/: Cargo.toml
crates/pattern_surreal_compat/src/: agent_entity.rs  atproto_identity.rs  config.rs  convert.rs  (+8 more)
(+298 files in other folders)
