[package]
name = "pattern-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication and credential storage for Pattern"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "json",
    "chrono",
] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
miette = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
chrono = { workspace = true, features = ["serde"] }

# Jacquard for ATProto auth traits
jacquard.workspace = true

# JWK key serialization (used by Jacquard DPoP)
jose-jwk = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
