[package]
name = "pattern-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "pattern"
path = "src/main.rs"

[features]
default = ["oauth", "discord"]
oauth = ["pattern-core/oauth"]
discord = ["pattern-discord"]
legacy-convert = ["pattern-surreal-compat"]

[dependencies]
# Workspace dependencies
pattern-core = { path = "../pattern_core", features = ["export"] }
pattern-discord = { path = "../pattern_discord", optional = true }
pattern-db = { path = "../pattern_db"}
pattern-surreal-compat = { path = "../pattern_surreal_compat", optional = true }
pattern-auth = { path = "../pattern_auth" }
genai = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
miette = { workspace = true, features = ["fancy", "syntect-highlighter"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# CLI-specific dependencies
crossterm = "0.28"
ratatui = "0.29"
indicatif = "0.17"
comfy-table = "7.1"
owo-colors = "4.2"
termimad = "0.31"
dialoguer = "0.11"
dirs = { workspace = true }
dotenvy = { workspace = true }
rustyline-async = "0.4"
rpassword = "7.3"

# ATProto dependencies
reqwest = { workspace = true }
jacquard = "0.9"

[dev-dependencies]
pretty_assertions = { workspace = true }
